--- a/tracker/src/main/resources/application.properties
+++ b/tracker/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=tracker
+spring.datasource.url=jdbc:mysql://localhost:3306/dsct
+spring.datasource.username=root
+spring.datasource.password=Chanti@2134
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
