--- a/tracker/src/main/resources/application.properties
+++ b/tracker/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=tracker
+spring.datasource.url=jdbc:mysql://10.9.129.235:3306/supply_tracker
+spring.datasource.username=User1
+spring.datasource.password=qwerty@0912
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/akhilesh?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Thefallenfruit@123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
