--- a/tracker/src/main/resources/application.properties
+++ b/tracker/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=tracker
-spring.datasource.url=jdbc:mysql://10.9.129.235:3306/supply_tracker
+spring.datasource.url=jdbc:mysql://localhost:3306/supply_tracker
 spring.datasource.username=User1
 spring.datasource.password=qwerty@0912
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+server.error.include-stacktrace=never
+logging.level.org.springframework.security=DEBUG
